--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "sass": "^1.90.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
